generate standard java project from template